// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when query doesnt match renders correctly 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-lg-6-72"
>
  <div
    className="Ratio "
    style={
      Object {
        "display": "block",
        "overflow": "hidden",
      }
    }
  >
    <div
      className="Ratio-ratio "
      style={
        Object {
          "height": 0,
          "paddingTop": "66.66666666666667%",
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <div
        className="Ratio-content "
        style={
          Object {
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      >
        <div
          to="/materials/1234"
        >
          Link - 
          <img
            alt="foo"
            src="list"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="title-bar"
        >
          <div
            className="title-bar-text"
          >
            <div
              style={
                Object {
                  "color": "white",
                  "display": "block",
                  "textDecoration": "none",
                }
              }
              to="/materials/1234"
            >
              Link - 
              <h3
                className="MuiTypography-root-92 MuiTypography-subheading-99 MuiTypography-colorInherit-111"
              >
                foo
              </h3>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`when query matches when highlighted renders correctly 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-lg-12-78"
>
  <div
    className="Ratio "
    style={
      Object {
        "display": "block",
        "overflow": "hidden",
      }
    }
  >
    <div
      className="Ratio-ratio "
      style={
        Object {
          "height": 0,
          "paddingTop": "33.333333333333336%",
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <div
        className="Ratio-content "
        style={
          Object {
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      >
        <div
          to="/materials/1234"
        >
          Link - 
          <img
            alt="foo"
            src={undefined}
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="title-bar"
        >
          <div
            className="title-bar-text"
          >
            <div
              style={
                Object {
                  "color": "white",
                  "display": "block",
                  "textDecoration": "none",
                }
              }
              to="/materials/1234"
            >
              Link - 
              <h3
                className="MuiTypography-root-92 MuiTypography-subheading-99 MuiTypography-colorInherit-111"
              >
                foo
              </h3>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`when query matches when not highlighted renders correctly 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-lg-6-72"
>
  <div
    className="Ratio "
    style={
      Object {
        "display": "block",
        "overflow": "hidden",
      }
    }
  >
    <div
      className="Ratio-ratio "
      style={
        Object {
          "height": 0,
          "paddingTop": "66.66666666666667%",
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <div
        className="Ratio-content "
        style={
          Object {
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      >
        <div
          to="/materials/1234"
        >
          Link - 
          <img
            alt="foo"
            src="list"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="title-bar"
        >
          <div
            className="title-bar-text"
          >
            <div
              style={
                Object {
                  "color": "white",
                  "display": "block",
                  "textDecoration": "none",
                }
              }
              to="/materials/1234"
            >
              Link - 
              <h3
                className="MuiTypography-root-92 MuiTypography-subheading-99 MuiTypography-colorInherit-111"
              >
                foo
              </h3>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
